Fix the label of the Color control in the Inspector
The labels have display: inline-block
in WP Core 5.3.
So change it to block, so that
the label appears above the field.

--- a/css/src/editor.scss
+++ b/css/src/editor.scss
@@ -418,6 +418,10 @@ div[class^="wp-block-block-lab-"] {
     }
   }
 
+  .block-lab-color-control .components-base-control__label {
+    display: block;
+  }
+
   /* The FetchInput component */
   .bl-fetch--input input[type="text"] {
     width: 100%;
